# opa-service

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-build-and-push.yml
opa_service/: main.py
tests/: example.rego  test_eval.py
